# 3D_ComputerVision

./: README.md
Affine Transformation/: README.md  Structure.xyz
Affine Transformation/src/: FV.cpp  MatrixReaderWriter.cpp
Camera Calibration/: README.md
Camera Calibration/src/: main.cpp
Chessboard Calibrate/src_cboard/: main.cpp
Homography Estimation/: README.md
Homography Estimation/Input/: DSCF8688.jfif  DSCF8689.jfif  DSCF8690.jfif
Homography Estimation/src/: Panorama.cpp  features.txt
Line Detection/: CMakeLists.txt  README.md
Line Detection/src/: main.cpp  main.h
PlaneDetection/: CMakeLists.txt  README.md
PlaneDetection/dataOutputs/: outroom.xyz  street.xyz
PlaneDetection/src/: LSQfitting.cpp
Pong Game/: README.md
Pong Game/src/: PongGame.cpp  PongGame.h
Stereo Reconstruction/: MatrixReaderWriter.cpp  README.md  stereo_reconstruction.cpp
Stereo Reconstruction/Input/: 12_W_first_normal_leftright.mat  K.txt  ab_W_first_normal_general.mat
Stereo Reconstruction/Output/: triangulated_points_1_2.xyz  triangulated_points_a_b.xyz
Transformation/: README.md
Transformation/src/: TFS.cpp
